--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "use-sound": "^4.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
